deployment-kustomize/base/guestbook-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook
  labels:
    app.kubernetes.io/name: guestbook
    app.kubernetes.io/component: frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: guestbook
      app.kubernetes.io/component: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: guestbook
        app.kubernetes.io/component: frontend
    spec:
      containers:
      - name: guestbook
        image: gitlab-registry.<ENV-ANIMAL>.commandemy.training/git-user-<ENV-USER-ID>/guestbook-application:REPLACEME
        ports:
        - name: http-server
          containerPort: 3000
      imagePullSecrets:
      - name: regcred
