deployment-kustomize/base/guestbook-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: guestbook
  namespace: default
  labels:
    app.kubernetes.io/name: guestbook
    app.kubernetes.io/component: frontend
spec:
  ports:
  - port: 3000
    targetPort: http-server
  selector:
    app.kubernetes.io/name: guestbook
    app.kubernetes.io/component: frontend
  type: LoadBalancer
