deployment-kustomize/base/redis-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: backend
spec:
  ports:
  - port: 6379
    targetPort: redis-server
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: backend
